@@ -5,6 +5,10 @@ import com.fluxo.auth.dto.LoginRequest;
 import com.fluxo.auth.dto.LoginResponse;
 import com.fluxo.auth.dto.ResetPasswordRequest;
 import com.fluxo.auth.service.AuthService;
+
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -13,6 +17,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/auth")
@@ -30,13 +35,39 @@ public class AuthController {
     }
 
     @PostMapping("/forgot-password")
-    public ResponseEntity<Map<String, String>> forgotPassword(@Valid @RequestBody ForgotPasswordRequest request) {
-        return ResponseEntity.accepted()
+    @Operation(summary = "Solicitar recuperação de senha",
+               description = "Envia um email com um link para redefinir a senha")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "Email de recuperação enviado com sucesso"),
+        @ApiResponse(responseCode = "400", description = "Email é obrigatório")
+    })
+    public ResponseEntity<Map<String, String>> forgotPassword(@Valid @RequestBody ForgotPasswordRequest forgotPasswordRequest) {
+        if (forgotPasswordRequest.getEmail() == null || forgotPasswordRequest.getEmail().isEmpty()) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Email é obrigatório"));
+        }
+
+        authService.forgotPassword(forgotPasswordRequest);
+        return ResponseEntity.ok()
                 .body(Map.of("message", "Se o email existir, as instrucoes de recuperacao serao enviadas"));
     }
 
     @PostMapping("/reset-password")
-    public ResponseEntity<Map<String, String>> resetPassword(@Valid @RequestBody ResetPasswordRequest request) {
-        return ResponseEntity.ok(Map.of("message", "Senha redefinida com sucesso"));
+    @Operation(summary = "Redefinir senha",
+               description = "Redefine a senha do usuário a partir de um token de recuperação")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "Senha alterada com sucesso"),
+        @ApiResponse(responseCode = "400", description = "Link de recuperação inválido ou expirado ou senha fraca")
+    })
+    public ResponseEntity<Map<String, String>> resetPassword(@Valid @RequestBody ResetPasswordRequest resetPasswordRequest) {
+        if (resetPasswordRequest.getNewPassword() == null || resetPasswordRequest.getNewPassword().length() < 8) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", "Senha deve ter no mínimo 8 caracteres"));
+        }
+
+        try {
+            authService.resetPassword(resetPasswordRequest);
+            return ResponseEntity.ok(Map.of("message", "Senha redefinida com sucesso"));
+        } catch (Exception e) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("error", e.getMessage()));
+        }
     }
 }
